# pocketgemma4

./: Cargo.toml  README.md  prompt.txt
pocket-cli/: Cargo.toml
pocket-cli/src/: inspect_gguf.rs  main.rs
pocket-core/: Cargo.toml
pocket-core/src/: lib.rs  thinking.rs
pocket-engine/: Cargo.toml
pocket-engine/src/: lib.rs  quantized_gemma.rs
pocket-server/src/: lib.rs
pocket-ui/assets/: index.html
resources/: gguf_document.md
